# LSerialTerm

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md
CMake/: qtifw.cmake  windeployqt.cmake
Installer/: component.js
LSerialTerm/: HexConsole.cpp  HexConsole.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewConnectionWindow.cpp  NewConnectionWindow.h  NewConnectionWindow.ui  Resources.qrc
LSerialTerm/Widgets/: HexConsole.cpp  HexConsole.h  TerminalManager.cpp  TerminalManager.hpp
